[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.10", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-surprise"
authors = [{ name = "Nicolas Hug", email = "contact@nicolas-hug.com" }]
description = "An easy-to-use library for recommender systems."
requires-python = ">=3.8"
keywords = [ "recommender", "recommendation system" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
license = { "file" = "LICENSE.md" }
dependencies = [
  # Lower bounds for deps are as in scikit-learn in May 2024, 1.6.dev0
  "joblib>=1.2.0",
  "numpy>=1.19.5",
  "scipy>=1.6.0"
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = ["pytest", "pandas"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-bibtex", "sphinxcontrib-spelling"]

[project.scripts]
surprise = "surprise.__main__:main"

[project.urls]
homepage = "https://surpriselib.com"
repository = "https://github.com/NicolasHug/Surprise"



[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "surprise.__version__"}
readme = { content-type = "text/markdown", file = [
  "README.md",
]}


[tool.setuptools.packages.find]
exclude = ["tests*"]


